<resources>
    <string name="app_name">MovieApp</string>
    <string name="drawer_title">My Movies Storage</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_favorites">Favorites</string>
    <string name="menu_item_ratings">Ratings</string>
    <string name="nav_section_about">About</string>
    <string name="menu_item_about">About</string>
    <string name="nav_section_movies">Movies</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_details">Details</string>
    <string name="drawer_subtitle">Search for a movie…</string>
    <string name="home_fragment_placeholder">Home fragment</string>
    <string name="favorites_fragment_placeholder">Favorites fragment</string>
    <string name="ratings_fragment_placeholder">Ratings fragment</string>
    <string name="settings_fragment_placeholder">Settings fragment</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="imageview_movie">imageview_movie</string>
    <string name="error">Error</string>
    <string name="reload">Reload</string>
    <string name="movie_title">Spider-man: No Way Home</string>
    <string name="movie_year">2021</string>
    <string name="movie_rating">8.4</string>
    <string name="movie_card_star_icon">movie_card_star_icon</string>
    <string name="toolbar_settings_title">Settings</string>
    <string name="toolbar_search_title">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorites_item_title">The King\'s Man</string>
    <string name="favorites_item_release_date">12/22/2021</string>
    <string name="favorites_item_genre">Action, Adventure, Thriller</string>
    <string name="favorites_item_rating">7,1</string>
    <string name="imageview_poster">imageviewPoster</string>
    <string name="imageview_rating_favorites">imageviewRatingFavorites</string>
    <string name="imageview_flag_favorite">imageviewFlagFavorite</string>
    <string name="imageviewPoster">imageview_poster</string>
    <string name="movie_genres_details">Action, Adventure, Science Fiction and many-many more</string>
    <string name="starIcon">star_icon</string>
    <string name="budget_placeholder_details">Budget:</string>
    <string name="revenue_placeholder_details">Revenue:</string>
    <string name="release_date_placeholder_details">Release date:</string>
    <string name="budget_value_details">$200,000,000.00</string>
    <string name="revenue_value_details">$1,809,940,686.00</string>
    <string name="release_date_value_details">12/17/2021</string>
    <string name="original_movie_name_details">Title</string>
    <string name="duration_details">2h 28m</string>
    <string name="rating_details">8.3 (8128)</string>
    <string name="movie_overview_details">Peter Parker is unmasked and no longer able to separate his normal life from the high-stakes of being a super-hero. When he asks for help from Doctor Strange the stakes become even more dangerous, forcing him to discover what it truly means to be Spider-Man.</string>
    <string name="localized_movie_name_details">Original title</string>
    <string name="favorites_movie_flag">Favorites movie flag</string>
    <string name="switch_text_on">On</string>
    <string name="switch_text_off">Off</string>
    <string name="settings_rating_text">Show only movies with rating more than 8.0</string>
    <string name="settings_title">Settings</string>
    <string name="details_write_review_btn">write review</string>
    <string name="et_review_hint">Write your review ...</string>
    <string name="btn_send">send</string>
    <string name="menu_history">History</string>
    <string name="history_title">Reviews</string>
    <string name="menu_contacts">Content provider</string>
    <string name="contacts_title">Contacts</string>
</resources>