<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_menu_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_item_home" />
        <item
            android:id="@+id/drawer_menu_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_item_favorites" />
        <item
            android:id="@+id/drawer_menu_ratings"
            android:icon="@drawable/ic_rating"
            android:title="@string/menu_item_ratings" />
    </group>

    <item android:title="@string/nav_section_about">
        <menu>
            <item
                android:id="@+id/drawer_menu_about"
                android:icon="@drawable/ic_android_black"
                android:title="@string/menu_item_about" />
        </menu>
    </item>

    <item android:title="@string/nav_section_movies">
        <menu>
            <item
                android:id="@+id/drawer_menu_search"
                android:icon="@drawable/ic_search"
                android:title="@string/menu_item_search" />
            <item
                android:id="@+id/drawer_menu_details"
                android:icon="@drawable/ic_details"
                android:title="@string/menu_item_details" />
        </menu>
    </item>
</menu>