<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/toolbar_search_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/menu_history"
        android:title="@string/menu_history"
        android:icon="@drawable/ic_history"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_contacts"
        android:icon="@drawable/ic_contacts"
        android:title="@string/menu_contacts"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_contacts_new"
        android:icon="@drawable/ic_contacts"
        android:title="@string/menu_contacts"
        app:showAsAction="always" />
    <item
        android:id="@+id/settings"
        android:title="@string/toolbar_settings_title"
        app:showAsAction="never" />
</menu>