<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.details.DetailsFragment"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp" >

        <TextView
            android:id="@+id/original_title_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/localized_movie_name_details"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/original_movie_name_details"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/original_title_movie_details" />

        <ImageView
            android:id="@+id/iv_poster"
            android:layout_width="150dp"
            android:layout_height="220dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_movie_details"
            app:srcCompat="@drawable/mpd"
            android:contentDescription="@string/imageviewPoster" />

        <TextView
            android:id="@+id/genre_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/movie_genres_details"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toTopOf="@+id/iv_poster" />

        <TextView
            android:id="@+id/duration_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/duration_details"
            android:textAlignment="textStart"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/genre_movie_details" />

        <TextView
            android:id="@+id/rating_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            tools:text="@string/rating_details"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/duration_movie_details" />

        <ImageView
            android:id="@+id/star_icon_movie_details"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/rating_movie_details"
            app:layout_constraintStart_toEndOf="@+id/rating_movie_details"
            app:layout_constraintTop_toTopOf="@+id/rating_movie_details"
            app:srcCompat="@android:drawable/btn_star_big_on"
            android:contentDescription="@string/starIcon" />

        <TextView
            android:id="@+id/budget_placeholder_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/budget_placeholder_details"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/rating_movie_details" />

        <TextView
            android:id="@+id/budget_value_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/budget_value_details"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/budget_placeholder_movie_details"
            app:layout_constraintStart_toEndOf="@+id/budget_placeholder_movie_details"
            app:layout_constraintTop_toTopOf="@+id/budget_placeholder_movie_details" />

        <TextView
            android:id="@+id/revenue_placeholder_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/revenue_placeholder_details"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/budget_placeholder_movie_details" />

        <TextView
            android:id="@+id/revenue_value_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/revenue_value_details"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/revenue_placeholder_movie_details"
            app:layout_constraintStart_toEndOf="@+id/revenue_placeholder_movie_details"
            app:layout_constraintTop_toTopOf="@+id/revenue_placeholder_movie_details" />

        <TextView
            android:id="@+id/release_date_placeholder_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/release_date_placeholder_details"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/iv_poster"
            app:layout_constraintTop_toBottomOf="@+id/revenue_placeholder_movie_details" />

        <TextView
            android:id="@+id/release_date_value_movie_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="@string/release_date_value_details"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/release_date_placeholder_movie_details"
            app:layout_constraintStart_toEndOf="@+id/release_date_placeholder_movie_details"
            app:layout_constraintTop_toTopOf="@+id/release_date_placeholder_movie_details" />

        <TextView
            android:id="@+id/overview_movie_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/movie_overview_details"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@+id/iv_poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>





