<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    tools:context=".view.settings.SettingsFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/settings_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/settings_rating_switch_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="@string/settings_rating_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/settings_title"
        app:layout_constraintEnd_toStartOf="@id/settings_switch_btn"
        app:layout_constraintTop_toBottomOf="@id/settings_title" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/settings_switch_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textOff="@string/switch_text_off"
        android:textOn="@string/switch_text_on"
        android:thumb="@drawable/thumb1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/settings_rating_switch_text"
        app:showText="true"
        app:track="@drawable/track" />


</androidx.constraintlayout.widget.ConstraintLayout>